# chinese_chees_bot_307

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
datasets/: README.md  visualize_bbox.py
datasets/train/: labels.cache
datasets/valid/: labels.cache
docs/: architecture.md  assembly_guide.md  bom.md  wiring_diagram.md
firmware/: platformio.ini
firmware/src/: main.cpp  suction_control.cpp
runs/detect/runs/detect/test_inference/labels/: 09025cc0-Untitled-160_jpg.rf.4a3a16652b18e8d88454750b05aba1dd.txt  10_jpg.rf.2006e411ecb4ea9c131027f3e0d0e003.txt  131e38c9-Untitled-118_jpg.rf.b836ea76e5d417314941b18f10872898.txt  13_jpg.rf.90e2073171272354092b7d34f0cb6cdd.txt  18_jpg.rf.9a721da456b4053f134aaa18d7a13c14.txt  193cc72d-Untitled-47_jpg.rf.75f3b37a8a0d89a2b3b52e6bc95c9dbf.txt  1a2f515a-Untitled-61_jpg.rf.51d490e915fbee56d13bac03dc889470.txt  21_jpg.rf.b1d68255ee9ca8d1468420a0ff3a00cd.txt  22_jpg.rf.7c06750f5d85c872f726ea0fbfb4be40.txt  23_jpg.rf.0960610478ef5357c0f0c3066f606621.txt  (+50 more)
runs/detect/train/: args.yaml  results.csv
runs/detect/train2/: args.yaml  results.csv
scripts/: run.sh  setup.sh
software/chess_engine/: __init__.py
software/control/: __init__.py
software/control/suction_control/: README.md  __init__.py  package.xml  setup.py  suction_control.py  suction_control_standalone.py
software/control/suction_control/test/: test_suction.py
software/game_manager/: __init__.py  main.py
software/vision/: __init__.py
software/vision/detection/: chinese_chess.yaml
tests/: __init__.py  training.ipynb
(+60 files in other folders)
